--- a/rnapp/package.json
+++ b/rnapp/package.json
@@ -10,9 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.2",
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-encrypted-storage": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
